WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100552
Regression(
r132647
)-Enable WebGL in EwkView.
https://bugs.webkit.org/show_bug.cgi?id=100552
Summary
Regression(r132647)-Enable WebGL in EwkView.
kalyan
Reported
2012-10-26 12:03:05 PDT
Created
attachment 170981
[details]
enable webgl Webgl seems to be enabled with
http://trac.webkit.org/changeset/132627
. But some of the changes seem lost after
http://trac.webkit.org/changeset/132647
. i.e setWebGLEnabled(true); in EwkViewImpl.cpp Bringing back the change.
Attachments
enable webgl
(1.05 KB, patch)
2012-10-26 12:03 PDT
,
kalyan
no flags
Details
Formatted Diff
Diff
enable webgl
(1.52 KB, patch)
2012-10-26 14:50 PDT
,
kalyan
kenneth
: review-
kenneth
: commit-queue-
Details
Formatted Diff
Diff
enable webgl
(1.54 KB, patch)
2012-10-26 17:13 PDT
,
kalyan
kenneth
: review+
kenneth
: commit-queue-
Details
Formatted Diff
Diff
enablewebgl
(1.55 KB, patch)
2012-10-30 07:40 PDT
,
Kalyan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Yael
Comment 1
2012-10-26 12:23:42 PDT
Comment on
attachment 170981
[details]
enable webgl Please add a changelog, and if you want this patch reviewed, you need to set the review flag.
kalyan
Comment 2
2012-10-26 14:30:12 PDT
changing the bug title
kalyan
Comment 3
2012-10-26 14:40:09 PDT
changing the bug title (In reply to
comment #1
)
> (From update of
attachment 170981
[details]
) > Please add a changelog, and if you want this patch reviewed, you need to set the review flag.
Yes, Preparing a new patch with it
kalyan
Comment 4
2012-10-26 14:50:57 PDT
Created
attachment 171019
[details]
enable webgl ChangeLog was missing in the previous patch.Uploading a new patch with ChangeLog
WebKit Review Bot
Comment 5
2012-10-26 15:01:04 PDT
Attachment 171019
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/UIProcess/API/efl/EwkViewImpl.cpp:128: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kenneth Rohde Christiansen
Comment 6
2012-10-26 15:59:37 PDT
Comment on
attachment 171019
[details]
enable webgl View in context:
https://bugs.webkit.org/attachment.cgi?id=171019&action=review
> Source/WebKit2/ChangeLog:8 > + Webgl is enabled with
http://trac.webkit.org/changeset/132627
.
WebGL*
> Source/WebKit2/ChangeLog:9 > + But some of the changes seem lost after
http://trac.webkit.org/changeset/132647
.
seems is a bit vague, you need to make us confident of your change
>> Source/WebKit2/UIProcess/API/efl/EwkViewImpl.cpp:128 >> + //Enable Webgl Support > > Should have a space between // and comment [whitespace/comments] [4]
This comments should be actual sentences. Ie. a space after // and a punctuation mark at the end. In this case the comment doesn't add any value, so it should be removed
kalyan
Comment 7
2012-10-26 17:13:07 PDT
Created
attachment 171055
[details]
enable webgl Changes done as per the review
Kenneth Rohde Christiansen
Comment 8
2012-10-30 02:58:00 PDT
Comment on
attachment 171055
[details]
enable webgl View in context:
https://bugs.webkit.org/attachment.cgi?id=171055&action=review
> Source/WebKit2/ChangeLog:8 > + WebGL is enabled with the following changeset:
http://trac.webkit.org/changeset/132627
.
I would just remove the .
> Source/WebKit2/ChangeLog:10 > + But some of the changes are lost after the following changeset:
http://trac.webkit.org/changeset/132647
. > + i.e setWebGLEnabled(true); in EwkViewImpl.cpp Bringing back the change.
Bringing... seems like a new sentence.
Gyuyoung Kim
Comment 9
2012-10-30 03:52:11 PDT
Comment on
attachment 171055
[details]
enable webgl View in context:
https://bugs.webkit.org/attachment.cgi?id=171055&action=review
> Source/WebKit2/ChangeLog:3 > + [EFL][WK2][AC] Enable Webgl in EwkView.
Bug title is different from this. Regression(
r132647
) - enable Webgl in EwkView
Kalyan
Comment 10
2012-10-30 07:40:19 PDT
Created
attachment 171450
[details]
enablewebgl review changes
kalyan
Comment 11
2012-10-30 07:45:38 PDT
bug title update
WebKit Review Bot
Comment 12
2012-10-30 08:46:17 PDT
Comment on
attachment 171450
[details]
enablewebgl Clearing flags on attachment: 171450 Committed
r132912
: <
http://trac.webkit.org/changeset/132912
>
WebKit Review Bot
Comment 13
2012-10-30 08:46:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug