Regression(r132647)-Enable WebGL in EwkView. https://bugs.webkit.org/show_bug.cgi?id=100552.

Patch by Kondapally Kalyan <kalyan.kondapally@intel.com> on 2012-10-30
Reviewed by Kenneth Rohde Christiansen.

WebGL is enabled with following changeset: http://trac.webkit.org/changeset/132627.
Some changes are lost after the following changeset: http://trac.webkit.org/changeset/132647
i.e setWebGLEnabled(true);  in EwkViewImpl.cpp.
This patch re-applies the lost changes.

* UIProcess/API/efl/EwkViewImpl.cpp:
(EwkViewImpl::EwkViewImpl):

Canonical link: https://commits.webkit.org/118796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132912 268f45cc-cd09-0410-ab3c-d52691b4dbfc